logs/ng.ftp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ng'...
Listing './lib/python3.5/site-packages/ng/ftp'...
Compiling './lib/python3.5/site-packages/ng/ftp/attributefactory.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/attributefactory.py", line 22
    print "Create FILE:",content_type, data
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ng/ftp/default'...
Listing './lib/python3.5/site-packages/ng/ftp/etc'...
Compiling './lib/python3.5/site-packages/ng/ftp/readnotdirectory.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/readnotdirectory.py", line 32
    raise KeyError,key
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/ftp/widget'...
Compiling './lib/python3.5/site-packages/ng/ftp/widget/ftpwidget.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/widget/ftpwidget.py", line 33
    except SyntaxError,msg :
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/ftp/widget/nsannotations4object.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/widget/nsannotations4object.py", line 29
    print sys.excepthook(*sys.exc_info())
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/ftp/widget/nsat4object.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/widget/nsat4object.py", line 22
    print sys.excepthook(*sys.exc_info())
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ng/ftp/writeattributes.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/writeattributes.py", line 27
    print "VALUE!!",value
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ng/ftp/writedirectory.py'...
***   File "./lib/python3.5/site-packages/ng/ftp/writedirectory.py", line 25
    except Exception,msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng.ftp-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pd'...
Listing './lib/python3.5/site-packages/pd/lib'...
Compiling './lib/python3.5/site-packages/pd/lib/fuzzyobject.py'...
***   File "./lib/python3.5/site-packages/pd/lib/fuzzyobject.py", line 24
    except AttributeError,msg :
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/lib/fuzzyobject_sample.py'...
***   File "./lib/python3.5/site-packages/pd/lib/fuzzyobject_sample.py", line 38
    print ob.name,ob.agg
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/lib/linear_quantizator.py'...
***   File "./lib/python3.5/site-packages/pd/lib/linear_quantizator.py", line 99
    print x,y
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/lib/topsort.py'...
***   File "./lib/python3.5/site-packages/pd/lib/topsort.py", line 50
    raise UnknownDependency, "Unknown dependency %s of %s" % (dep, obj)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/lib/utility.py'...
***   File "./lib/python3.5/site-packages/pd/lib/utility.py", line 19
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pd.lib-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
